Fix contact scripts & button css overlaps with plugins (eg google maps)

--- a/resources/assets/sass/inc/forms.scss
+++ b/resources/assets/sass/inc/forms.scss
@@ -85,7 +85,7 @@ input[type="search"] {
 }
 
 // Buttons
-button, input[type="reset"], input[type="submit"], .button {
+input[type="reset"], input[type="submit"], .button {
   float: left; display: block; clear: both;
   transition: $transitionDefault;
   outline: 0; line-height: 1.2em;
