--- a/static/assets/css/style.css
+++ b/static/assets/css/style.css
@@ -894,7 +894,7 @@ input[type="search"] {
   -webkit-box-sizing: content-box;
   box-sizing: content-box; }
 
-button, input[type="reset"], input[type="submit"], .button {
+input[type="reset"], input[type="submit"], .button {
   float: left;
   display: block;
   clear: both;
@@ -908,17 +908,17 @@ button, input[type="reset"], input[type="submit"], .button {
   text-decoration: none;
   color: #fff;
   text-transform: uppercase; }
-  button i, input[type="reset"] i, input[type="submit"] i, .button i {
+  input[type="reset"] i, input[type="submit"] i, .button i {
     margin: -5px 6px 0 5px; }
-  button:hover, button:focus, button:active, input[type="reset"]:hover, input[type="reset"]:focus, input[type="reset"]:active, input[type="submit"]:hover, input[type="submit"]:focus, input[type="submit"]:active, .button:hover, .button:focus, .button:active {
+  input[type="reset"]:hover, input[type="reset"]:focus, input[type="reset"]:active, input[type="submit"]:hover, input[type="submit"]:focus, input[type="submit"]:active, .button:hover, .button:focus, .button:active {
     background-color: #cc6600; }
-  button:active, input[type="reset"]:active, input[type="submit"]:active, .button:active {
+  input[type="reset"]:active, input[type="submit"]:active, .button:active {
     -webkit-box-shadow: inset 0 1px 2px rgba(0, 0, 0, 0.2);
     box-shadow: inset 0 1px 2px rgba(0, 0, 0, 0.2);
     -webkit-transform: translateY(1px);
     -ms-transform: translateY(1px);
     transform: translateY(1px); }
-  button::-moz-focus-inner, input[type="reset"]::-moz-focus-inner, input[type="submit"]::-moz-focus-inner, .button::-moz-focus-inner {
+  input[type="reset"]::-moz-focus-inner, input[type="submit"]::-moz-focus-inner, .button::-moz-focus-inner {
     border: 0; }
 
 button, input[type="text"], input[type="submit"], input[type="button"], input[type="reset"],
